<resources>
    <string name="app_name">JMBG Validator</string>
    <string name="name">Unesite vaše ime</string>
    <string name="surname">Unesite vaše prezime</string>
    <string name="submit">Pošalji</string>
    <string name="jmbg">Unesite vaš JMBG</string>
    <string name="invalid_name">Ime je obavezno!</string>
    <string name="invalid_surname">Prezime je obavezno!</string>
    <string name="invalid_jmbg">JMBG je obavezan!</string>
    <string name="invalid_jmbg_length">JMBG mora imati 13 cifara!</string>
    <string name="invalid_jmbg_date">Datum nije validan!</string>
    <string name="invalid_jmbg_region">Region nije validan!</string>
    <string name="invalid_jmbg_control_digit">Kontrolna cifra nije validna!</string>
    <string name="error">Greška</string>
    <string name="name_label">Ime:</string>
    <string name="surname_label">Prezime:</string>
    <string name="jmbg_label">JMBG:</string>
    <string name="region_label">Region:</string>
    <string name="country_label">Država:</string>
    <string name="gender_label">Pol:</string>
    <string name="ordinal_number_and_day_of_birth_label">Redni broj rođenja:</string>
    <string name="day_of_birth_label">Dan rođenja:</string>
    <string name="foreigners">stranci bez državljanstva bivše SFRJ ili njenih naslednica</string>
    <string name="foreigners_BiH">stranci u BiH</string>
    <string name="foreigners_Montenegro">stranci u Crnoj Gori</string>
    <string name="foreigners_Croatia">stranci u Hrvatskoj</string>
    <string name="foreigners_Macedonia">stranci u Makedoniji</string>
    <string name="foreigners_Slovenia">stranci u Sloveniji</string>
    <string name="foreigners_Serbia">stranci u Srbiji (bez pokrajina)</string>
    <string name="foreigners_Vojvodina">stranci u Vojvodini</string>
    <string name="foreigners_KIM">stranci na Kosovu i Metohiji</string>
    <string name="invalid_region">Nije Poznato</string>
    <string name="pristina">Priština region</string>
    <string name="kosovska_mitrovica">Kosovska Mitrovica region</string>
    <string name="pec">Peć region</string>
    <string name="djakovica">Đakovica region</string>
    <string name="prizren">Prizren region</string>
    <string name="kosovsko_pomoravski_okrug">Kosovsko Pomoravski okrug</string>
    <string name="male">Muško</string>
    <string name="female">Žensko</string>
    <string name="date_of_birth_label">Datum rođenja:</string>
    <string name="bih">Bosna i Hercegovina</string>
    <string name="banja_luka">Banja Luka</string>
    <string name="bihac">Bihać</string>
    <string name="doboj">Doboj</string>
    <string name="gorazde">Goražde</string>
    <string name="livno">Livno</string>
    <string name="mostar">Mostar</string>
    <string name="prijedor">Prijedor</string>
    <string name="sarajevo">Sarajevo</string>
    <string name="tuzla">Tuzla</string>
    <string name="zenica">Zenica</string>
    <string name="montenegro">Crna Gora</string>
    <string name="podgorica">Podgorica</string>
    <string name="niksic">Nikšić</string>
    <string name="pljevlja">Pljevlja</string>
    <string name="croatia">Hrvatska</string>
    <string name="croatia_1">Osijek, Slavonija region</string>
    <string name="sremska_mitrovica">Sremska Mitrovica region</string>
    <string name="ruma">Ruma region</string>
    <string name="central_Serbia">Srbija, Centralna Srbija</string>
    <string name="kikinda">Kikinda region</string>
    <string name="novi_sad">Novi Sad region</string>
    <string name="sombor">Sombor region</string>
    <string name="subotica">Subotica region</string>
    <string name="zrenjanin">Zrenjanin region</string>
    <string name="pancevo">Pančevo region</string>
    <string name="uzice">Užice region</string>
    <string name="beograd">Beograd region</string>
    <string name="sumadija">Šumadija</string>
    <string name="nis">Niš region</string>
    <string name="juzna_morava">Južna Morava</string>
    <string name="slovenija">Slovenija</string>
    <string name="zajecar">Zaječar</string>
    <string name="podunavlje">Podunavlje</string>
    <string name="podrinje_kolubara">Podrinje i Kolubara</string>
    <string name="kraljevo">Kraljevo region</string>
    <string name="serbia_vojvodina">Srbija, AP Vojvodina</string>
    <string name="serbia_kim">Srbija, AP Kosovo i Metohija</string>
    <string name="bitola">Bitola</string>
    <string name="kumanovo">Kumanovo</string>
    <string name="ohrid">Ohrid</string>
    <string name="prilep">Prilep</string>
    <string name="stip">Štip</string>
    <string name="skoplje">Skoplje</string>
    <string name="veles">Veles</string>
    <string name="strumica">Strumica</string>
    <string name="tetovo">Tetovo</string>
    <string name="croatia_2">Bjelovar, Virovitica, Koprivnica, Pakrac, Podravina region</string>
    <string name="croatia_3">Varaždin, Međimurje region</string>
    <string name="croatia_4">Zagreb</string>
    <string name="croatia_5">Karlovac</string>
    <string name="croatia_6">Gospić, Lika region</string>
    <string name="croatia_7">Rijeka, Pula, Istra i Primorje region</string>
    <string name="croatia_8">Sisak, Banovina region</string>
    <string name="croatia_9">Split, Zadar, Dubrovnik, Dalmacija region</string>
    <string name="ostalo">Ostalo</string>
    <string name="macedonia">Makedonija</string>
    <string name="sunday">Nedelja</string>
    <string name="monday">Ponedeljak</string>
    <string name="tuesday">Utorak</string>
    <string name="wednesday">Sreda</string>
    <string name="thursday">Četvrtak</string>
    <string name="friday">Petak</string>
    <string name="saturday">Subota</string>
    <string name="required_field">*Obavezno polje</string>
    <string name="jmbg_only_digits">*JMBG može da se sastoji samo od cifara</string>
</resources>