<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.App.CardView"
    app:cardBackgroundColor="@color/primary"
    app:rippleColor="@color/primary_light">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/length_16">

            <TextView
                android:id="@+id/name_label"
                style="@style/Widget.TextViewLabel"
                android:text="@string/name_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView
                android:id="@+id/name_scrollview"
                android:layout_width="@dimen/length_0"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/name_label"
                app:layout_constraintStart_toStartOf="@+id/surname_scrollview"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/name"
                    style="@style/Widget.TextView"
                    android:scrollHorizontally="true"
                    tools:text="Vukan" />

            </HorizontalScrollView>

            <TextView
                android:id="@+id/surname_label"
                style="@style/Widget.TextViewLabel"
                android:text="@string/surname_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_label" />

            <HorizontalScrollView
                android:id="@+id/surname_scrollview"
                android:layout_width="@dimen/length_0"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/surname_label"
                app:layout_constraintStart_toStartOf="@+id/jmbg"
                app:layout_constraintTop_toBottomOf="@id/name_scrollview">

                <TextView
                    android:id="@+id/surname"
                    style="@style/Widget.TextView"
                    android:scrollHorizontally="true"
                    tools:text="Marković" />

            </HorizontalScrollView>

            <TextView
                android:id="@+id/jmbg_label"
                style="@style/Widget.TextViewLabel"
                android:text="@string/jmbg_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/surname_label" />

            <TextView
                android:id="@+id/jmbg"
                style="@style/Widget.TextView"
                android:layout_width="@dimen/length_0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/jmbg_label"
                app:layout_constraintStart_toStartOf="@+id/country_scrollview"
                app:layout_constraintTop_toBottomOf="@id/surname_scrollview"
                tools:text="0103994800015" />

            <TextView
                android:id="@+id/country_label"
                style="@style/Widget.TextViewLabel"
                android:text="@string/country_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/jmbg_label" />

            <HorizontalScrollView
                android:id="@+id/country_scrollview"
                android:layout_width="@dimen/length_0"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/country_label"
                app:layout_constraintStart_toStartOf="@+id/region_scrollview"
                app:layout_constraintTop_toBottomOf="@id/jmbg">

                <TextView
                    android:id="@+id/country"
                    style="@style/Widget.TextView"
                    android:scrollHorizontally="true"
                    tools:text="Srbija" />

            </HorizontalScrollView>

            <TextView
                android:id="@+id/region_label"
                style="@style/Widget.TextViewLabel"
                android:text="@string/region_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/country_label" />

            <HorizontalScrollView
                android:id="@+id/region_scrollview"
                android:layout_width="@dimen/length_0"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/region_label"
                app:layout_constraintStart_toStartOf="@+id/gender"
                app:layout_constraintTop_toBottomOf="@id/country_scrollview">

                <TextView
                    android:id="@+id/region"
                    style="@style/Widget.TextView"
                    android:scrollHorizontally="true"
                    tools:text="Sombor" />

            </HorizontalScrollView>

            <TextView
                android:id="@+id/gender_label"
                style="@style/Widget.TextViewLabel"
                android:text="@string/gender_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/region_label" />

            <TextView
                android:id="@+id/gender"
                style="@style/Widget.TextView"
                android:layout_width="@dimen/length_0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/gender_label"
                app:layout_constraintStart_toStartOf="@+id/date_of_birth"
                app:layout_constraintTop_toBottomOf="@id/region_scrollview"
                tools:text="Muško" />

            <TextView
                android:id="@+id/date_of_birth_label"
                style="@style/Widget.TextViewLabel"
                android:text="@string/date_of_birth_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gender_label" />

            <TextView
                android:id="@+id/date_of_birth"
                style="@style/Widget.TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/date_of_birth_label"
                app:layout_constraintTop_toBottomOf="@id/gender"
                tools:text="04.01.1991." />

            <TextView
                android:id="@+id/ordinal_number_of_birth_label"
                style="@style/Widget.TextViewLabel"
                android:text="@string/ordinal_number_and_day_of_birth_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_of_birth_label" />

            <TextView
                android:id="@+id/ordinal_number_of_birth"
                style="@style/Widget.TextView"
                android:layout_width="@dimen/length_0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ordinal_number_of_birth_label"
                app:layout_constraintStart_toStartOf="@+id/date_of_birth"
                app:layout_constraintTop_toBottomOf="@id/date_of_birth"
                tools:text="4" />

            <TextView
                android:id="@+id/day_of_birth_label"
                style="@style/Widget.TextViewLabel"
                android:text="@string/day_of_birth_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ordinal_number_of_birth_label" />

            <TextView
                android:id="@+id/day_of_birth"
                style="@style/Widget.TextView"
                android:layout_width="@dimen/length_0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/day_of_birth_label"
                app:layout_constraintStart_toStartOf="@+id/ordinal_number_of_birth"
                app:layout_constraintTop_toBottomOf="@id/ordinal_number_of_birth"
                tools:text="Subota" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</com.google.android.material.card.MaterialCardView>